--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <style>
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
-            --color-primary: #3498db;
+            /* MODIFIED: Redefining primary blue */
+            --color-primary: #3498db; 
             --color-secondary: #2ecc71;
-            --color-wrong: #e74c3c;
+            /* MODIFIED: Changed wrong/red color to #e22e1c */
+            --color-wrong: #e22e1c; 
             --color-bg: #ecf0f1;
             --color-text: #2c3e50;
             --color-light-text: #fefefe;
@@ -120,8 +122,8 @@
             background-color: var(--color-gray);
             cursor: not-allowed;
             opacity: 0.6;
-            /* MODIFIED: Change font color for better contrast on gray background */
-            color: #676767 !important; 
+            /* MODIFIED: Change font color to var(--color-text) (#2c3e50) for better contrast */
+            color: var(--color-text) !important; 
         }
         .medium-button, .expert-button {
             background-color: var(--color-secondary);
@@ -815,7 +817,6 @@
             const mediumButton = document.createElement('button');
             mediumButton.id = 'medium-button';
             mediumButton.className = 'theme-button medium-button';
-            // Corrected: Using innerHTML to insert icon (switching to FAS for better reliability)
             mediumButton.innerHTML = `Medium (${mediumCount}) <i class="fas fa-trophy"></i>`;
             mediumButton.onclick = () => startQuiz('Medium');
             mediumButton.disabled = mediumCount === 0;
@@ -825,7 +826,6 @@
             const advancedButton = document.createElement('button');
             advancedButton.id = 'advanced-button';
             advancedButton.className = 'theme-button advanced-button';
-            // Corrected: Using innerHTML to insert icons (switching to FAS for better reliability)
             advancedButton.innerHTML = `Advanced (${advancedCount}) <i class="fas fa-trophy"></i><i class="fas fa-trophy"></i>`;
             advancedButton.onclick = () => startQuiz('Advanced');
             advancedButton.disabled = advancedCount === 0;
@@ -836,7 +836,6 @@
             const expertButton = document.createElement('button');
             expertButton.id = 'expert-button';
             expertButton.className = 'theme-button expert-button';
-            // Corrected: Using innerHTML to insert icon (switching to FAS for better reliability)
             expertButton.innerHTML = `Expert (${expertCount}/${totalTerms}) <i class="fas fa-award"></i>`;
             expertButton.onclick = () => startQuiz('Expert');
             expertButton.disabled = expertCount === 0;
