--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
-            /* MODIFIED: Redefining primary blue */
-            --color-primary: #3498db; 
+            /* MODIFIED: Changed primary blue color to #217bb8 */
+            --color-primary: #217bb8; 
             --color-secondary: #2ecc71;
-            /* MODIFIED: Changed wrong/red color to #e22e1c */
-            --color-wrong: #e22e1c; 
+            /* MODIFIED: Changed wrong/red color to #e12e1c */
+            --color-wrong: #e12e1c; 
             --color-bg: #ecf0f1;
             --color-text: #2c3e50;
             --color-light-text: #fefefe;
@@ -126,7 +126,7 @@
             color: var(--color-text) !important; 
         }
         .medium-button, .expert-button {
-            background-color: var(--color-secondary);
+            background-color: var(--color-secondary-contrast);
         }
         .medium-button:hover:not(:disabled), .expert-button:hover:not(:disabled) {
             background-color: #27ae60;
