--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <style>
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
-            /* MODIFIED: Changed primary blue color to #217bb8 */
             --color-primary: #217bb8; 
-            --color-secondary: #2ecc71;
-            /* MODIFIED: Changed wrong/red color to #e12e1c */
+            /* MODIFIED: Changed color-secondary to the enhanced green #2EA771 */
+            --color-secondary: #2EA771; 
             --color-wrong: #e12e1c; 
             --color-bg: #ecf0f1;
             --color-text: #2c3e50;
             --color-light-text: #fefefe;
-            /* MODIFIED: New, more contrasted green color */
-            --color-secondary-contrast: #2EA771; 
+            /* REMOVED: Redundant --color-secondary-contrast variable */
             --color-gray: #bdc3c7;
         }
         /* ADDED: General icon spacing for buttons using new FA version */
@@ -99,7 +97,8 @@
             border-radius: 50%;
             object-fit: cover;
             margin-bottom: 15px;
-            border: 3px solid var(--color-primary);
+            /* Border uses the updated color-secondary */
+            border: 3px solid var(--color-secondary); 
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
         }
 
@@ -126,7 +125,8 @@
             color: var(--color-text) !important; 
         }
         .medium-button, .expert-button {
-            background-color: var(--color-secondary-contrast);
+            /* MODIFIED: Use the updated var(--color-secondary) */
+            background-color: var(--color-secondary);
         }
         .medium-button:hover:not(:disabled), .expert-button:hover:not(:disabled) {
             background-color: #27ae60;
@@ -161,7 +161,8 @@
         }
         /* Primary button (Cancel - Keep progress) -> Green BG (Contrast color used) */
         #modal-cancel-btn {
-            background-color: var(--color-secondary-contrast); /* Used #2EA771 */
+            /* MODIFIED: Use the updated var(--color-secondary) */
+            background-color: var(--color-secondary); 
             color: var(--color-light-text);
         }
         #modal-cancel-btn:focus {
@@ -306,7 +307,8 @@
             margin-bottom: 10px;
         }
         .feedback-correct {
-            color: var(--color-secondary);
+            /* Now uses the updated color-secondary */
+            color: var(--color-secondary); 
         }
         .feedback-wrong {
             color: var(--color-wrong);
@@ -319,7 +321,8 @@
             max-width: 100%;
             max-height: 150px;
             margin: 10px 0;
-            border: 3px solid var(--color-secondary);
+            /* Border uses the updated color-secondary */
+            border: 3px solid var(--color-secondary); 
             border-radius: 5px;
         }
         .main-question-area .term {
@@ -1118,6 +1121,7 @@
             // Visually mark slots green/red (optional but helpful)
             const slots = document.getElementById('answer-slots-container').children;
             for(let i = 0; i < slots.length; i++) {
+                // These colors rely on the updated :root variables
                 slots[i].style.color = isCorrect ? 'var(--color-secondary)' : 'var(--color-wrong)';
                 slots[i].style.borderBottomColor = isCorrect ? 'var(--color-secondary)' : 'var(--color-wrong)';
             }
