--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
             --color-primary: #217bb8; 
-            /* MODIFIED: Changed color-secondary to the enhanced green #2EA771 */
-            --color-secondary: #2EA771; 
+            --color-secondary: ##25855a; 
             --color-wrong: #e12e1c; 
             --color-bg: #ecf0f1;
             --color-text: #2c3e50;
             --color-light-text: #fefefe;
-            /* REMOVED: Redundant --color-secondary-contrast variable */
             --color-gray: #bdc3c7;
         }
         /* ADDED: General icon spacing for buttons using new FA version */
