--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* --- CSS STYLES (Mobile-First Responsive Design) --- */
         :root {
             --color-primary: #217bb8; 
-            --color-secondary: ##25855a; 
+            --color-secondary: #25855a; 
             --color-wrong: #e12e1c; 
             --color-bg: #ecf0f1;
             --color-text: #2c3e50;
