--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             background-color: var(--color-secondary); 
         }
         .advanced-button:hover:not(:disabled) {
-             background-color: #27ae60;
+             background-color: #166939;
         }
         
         /* MODIFIED: New styling for the logout button */
