--- a/index.html
+++ b/index.html
@@ -723,10 +723,20 @@
      * @param {string} screenId - The ID of the screen to activate.
      */
     function switchScreen(screenId) {
+        // 1. Force ALL screens to hide (display: none)
         document.querySelectorAll('.screen').forEach(screen => {
             screen.classList.remove('active');
+            // ADDED SAFETY LINE: Directly hide all screens
+            screen.style.display = 'none'; 
         });
-        document.getElementById(screenId).classList.add('active');
+        
+        // 2. Activate the target screen
+        const targetScreen = document.getElementById(screenId);
+        if (targetScreen) {
+            targetScreen.classList.add('active');
+            // ADDED SAFETY LINE: Directly show the target screen
+            targetScreen.style.display = 'flex'; 
+        }
     }
 
     /**
@@ -1123,10 +1133,10 @@
             
             // 3a. Get Distractors
             // For Mastery, get 2 distractors from Advanced, Medium, or New
-            const distractors = getDistractors(level, currentQuestion, 3); // Get 3 distractors
-            currentDistractors = distractors.slice(0, 2); // Only use 2 for display
+            const distractors = getDistractors(level, currentQuestion, 2); // Only need 2 distractors for the 3 image choices
+            currentDistractors = distractors; 
 
-            // 3b. Render Image Choices (3 distractors + 1 correct)
+            // 3b. Render Image Choices (2 distractors + 1 correct)
             renderImageQuizChoices(currentQuestion, currentDistractors);
             
             // 3c. Start Audio Playback
@@ -1322,394 +1332,3 @@
      */
     function resetSpelling() {
         // Re-enable all letter buttons
-        document.querySelectorAll('#letter-choices-container .letter-button').forEach(btn => {
-            btn.disabled = false;
-        });
-        
-        // Clear all answer slots visually and clear the logic array
-        document.querySelectorAll('#answer-slots-container .letter-slot').forEach(slot => {
-            slot.textContent = '';
-            // Ensure default color is restored if checkAnswer was run previously
-            slot.style.color = 'var(--color-text)';
-            slot.style.borderBottomColor = 'var(--color-text)'; 
-        });
-        currentAnswer = [];
-        
-        // Ensure the refresh button is visible after reset
-        document.getElementById('reset-spelling-button').style.display = 'block'; 
-        document.getElementById('refresh-button-spacer').style.display = 'none';
-
-    }
-
-    /**
-     * Handles the user clicking a letter button.
-     */
-    function clickLetter(button) {
-        const slots = document.getElementById('answer-slots-container').children;
-        const currentIndex = currentAnswer.length;
-
-        if (currentIndex < correctTermLetters.length) {
-            const letter = button.dataset.letter;
-            
-            // 1. Fill the current open slot
-            slots[currentIndex].textContent = letter;
-            currentAnswer.push(letter);
-            
-            // 2. Disable the clicked button
-            button.disabled = true;
-            
-            // 3. Check if the word is complete
-            if (currentAnswer.length === correctTermLetters.length) {
-                // Hide the refresh button once submission is complete
-                document.getElementById('reset-spelling-button').style.display = 'none';
-                document.getElementById('refresh-button-spacer').style.display = 'block'; // Show spacer
-                
-                clearInterval(timer);
-                checkAnswer();
-            }
-        }
-    }
-
-    /**
-     * Compares the user's input with the correct answer.
-     */
-    function checkAnswer() {
-        const userAnswer = currentAnswer.join('');
-        const correctAnswer = correctTermLetters.join('');
-        const isCorrect = userAnswer === correctAnswer;
-        
-        // Visually mark slots green/red (optional but helpful)
-        const slots = document.getElementById('answer-slots-container').children;
-        for(let i = 0; i < slots.length; i++) {
-            // These colors rely on the updated :root variables
-            slots[i].style.color = isCorrect ? 'var(--color-secondary)' : 'var(--color-wrong)';
-            slots[i].style.borderBottomColor = isCorrect ? 'var(--color-secondary)' : 'var(--color-wrong)';
-        }
-
-        // Submit with an empty distractor array. Chosen item is null if incorrect.
-        submitAnswer(isCorrect ? currentQuestion : null, []); 
-    }
-
-    function showExpertReview() {
-        clearInterval(timer);
-        
-        document.getElementById('feedback-message').textContent = "Review: Expert";
-        document.getElementById('feedback-message').className = 'feedback-message';
-
-        // Display question details
-        document.getElementById('question-feedback-image').src = currentQuestion.url;
-        document.getElementById('question-feedback-image').style.display = 'block';
-        document.getElementById('question-feedback-term').textContent = currentQuestion.term;
-        
-        // Hide distractor details as there was no quiz
-        document.querySelector('.distractor-details').style.display = 'none';
-        document.querySelector('.continue-button-container').style.display = 'block';
-
-
-        // Show demote button (allows demotion from Expert for revision)
-        const demoteBtn = document.getElementById('demote-button');
-        demoteBtn.style.display = 'block';
-        demoteBtn.textContent = "Demote to Mastery"; // MODIFIED: Demote to Mastery
-
-        switchScreen('feedback-screen');
-    }
-
-    function startTimer() {
-        clearInterval(timer);
-        const totalTime = MEDIUM_TIMER_SECONDS * 1000;
-        let timeRemaining = totalTime;
-        const bar = document.getElementById('timer-bar');
-
-        bar.style.width = '100%';
-
-        timer = setInterval(() => {
-            timeRemaining -= 100;
-            const percentage = (timeRemaining / totalTime) * 100;
-            bar.style.width = percentage + '%';
-
-            if (timeRemaining <= 0) {
-                clearInterval(timer);
-                // Disable letters/choices/images on timeout
-                document.querySelectorAll('.letter-button, .choice-button, .image-choice-button').forEach(btn => btn.disabled = true);
-                
-                // Hide the refresh button/show spacer on timeout
-                document.getElementById('reset-spelling-button').style.display = 'none'; 
-                document.getElementById('refresh-button-spacer').style.display = 'block'; 
-
-                
-                // Only Medium level needs special handling for timeout submission
-                if (currentQuizLevel === 'Medium') {
-                    // For Medium, submit wrong answer (null chosen item)
-                    submitAnswer(null, currentDistractors); // Use stored global distractors
-                }
-            }
-        }, 100);
-    }
-
-    function submitAnswer(chosenItem, distractors) {
-        clearInterval(timer);
-        // Disable all buttons immediately after submission or timeout
-        document.querySelectorAll('.letter-button, .choice-button, .image-choice-button').forEach(btn => btn.disabled = true);
-        
-        // Hide the refresh button/show spacer on submission
-        document.getElementById('reset-spelling-button').style.display = 'none';
-        document.getElementById('refresh-button-spacer').style.display = 'block';
-
-
-        // Determine if the answer was correct (handles all modes)
-        const isCorrect = chosenItem && chosenItem.term === currentQuestion.term;
-        
-        // Store old level before promotion logic runs
-        const oldLevel = currentQuestion.level; 
-        
-        processProgress(isCorrect);
-        
-        // Get new level after promotion logic runs
-        const updatedItem = gameData.find(d => d.term === currentQuestion.term);
-        const newLevel = updatedItem ? updatedItem.level : oldLevel;
-        
-        // MODIFIED: Store promotion info globally
-        if (isCorrect && oldLevel !== newLevel) {
-             PROMOTION_INFO = { oldLevel: oldLevel, newLevel: newLevel };
-        } else {
-             PROMOTION_INFO = null;
-        }
-
-
-        showFeedback(isCorrect, currentQuestion, distractors, chosenItem);
-
-
-        saveState(); // Save progress after every question
-    }
-
-    // --- PROGRESS MANAGEMENT ---
-
-    function processProgress(isCorrect) {
-        const item = currentQuestion;
-        const currentLevel = item.level;
-
-        if (isCorrect) {
-            item.correctCount++;
-            item.failCount = 0; // Reset fail count on success
-            
-            if (currentLevel === 'New' && item.correctCount >= 3) {
-                item.level = 'Medium';
-                item.correctCount = 0;
-            } else if (currentLevel === 'Medium' && item.correctCount >= 3) {
-                item.level = 'Advanced';
-                item.correctCount = 0;
-            } else if (currentLevel === 'Advanced' && item.correctCount >= 3) {
-                item.level = 'Mastery'; // MODIFIED: Promote Advanced to Mastery
-                item.correctCount = 0;
-            } else if (currentLevel === 'Mastery' && item.correctCount >= 3) { // NEW MASTERY PROMOTION
-                item.level = 'Expert'; 
-                item.correctCount = 0;
-            }
-        } else {
-            // Wrong answer / Time's up
-            item.correctCount = 0; // Reset correct count immediately
-            
-            if (currentLevel === 'Advanced') {
-                item.failCount = (item.failCount || 0) + 1; // Track consecutive fails
-                
-                if (item.failCount >= 3) {
-                    item.level = 'Medium'; // Demote Advanced to Medium
-                    item.failCount = 0;
-                }
-            } else if (currentLevel === 'Mastery') {
-                item.level = 'Advanced'; // NEW MASTERY DEMOTION
-                item.failCount = 0;
-            } else {
-                // Reset fail count for other levels if not used for demotion
-                item.failCount = 0;
-            }
-        }
-        // Update the main gameData array
-        const index = gameData.findIndex(d => d.term === item.term);
-        if (index !== -1) {
-            gameData[index].level = item.level;
-            gameData[index].correctCount = item.correctCount;
-            gameData[index].failCount = item.failCount || 0; 
-        }
-    }
-    
-    function demoteTerm() {
-        const item = currentQuestion;
-        
-        if (item.level === 'Expert') {
-            item.level = 'Mastery'; // MODIFIED: Demote from Expert to Mastery
-            item.correctCount = 0;
-        } else if (item.level === 'Mastery') { // NEW MASTERY DEMOTION
-            item.level = 'Advanced'; 
-            item.correctCount = 0;
-        } else if (item.level === 'Advanced') {
-            item.level = 'Medium'; // Demote from Advanced to Medium
-            item.correctCount = 0;
-        } else if (item.level === 'Medium') {
-            item.level = 'New'; 
-            item.correctCount = 0;
-        }
-        
-        // Update the main gameData array
-        const index = gameData.findIndex(d => d.term === item.term);
-        if (index !== -1) {
-            gameData[index].level = item.level;
-            gameData[index].correctCount = 0;
-            gameData[index].failCount = 0; // Reset fail count on manual demotion
-        }
-
-        saveState();
-        goToHome(); // Go to home after demoting
-    }
-
-    // --- AUDIO/TTS FUNCTIONALITY (ADDED) ---
-
-    /**
-     * Uses the Web Speech API (if supported) to pronounce a term.
-     * @param {string} term - The text to speak.
-     */
-    function playAudio(term = currentQuestion.term) {
-        if ('speechSynthesis' in window) {
-            const utterance = new SpeechSynthesisUtterance(term);
-            
-            // Set language to English (default)
-            utterance.lang = 'en-US'; 
-            
-            // Stop any currently speaking audio and start the new one
-            window.speechSynthesis.cancel();
-            window.speechSynthesis.speak(utterance);
-            
-            console.log(`Speaking: ${term}`);
-        } else {
-            console.error("SpeechSynthesis API not available.");
-        }
-    }
-
-    // --- FEEDBACK SCREEN ---
-
-    function showFeedback(isCorrect, question, distractors, chosenItem) {
-        
-        // 1. Message
-        const messageElement = document.getElementById('feedback-message');
-        // MODIFIED: Use new Font Awesome 5/6 icons for feedback
-        const iconClass = isCorrect ? 'fas fa-face-grin-stars' : 'fas fa-meh-rolling-eyes'; 
-        const messageText = isCorrect ? "You are right!" : "You are wrong!";
-        
-        messageElement.innerHTML = `${messageText} <i class="${iconClass}"></i>`;
-        messageElement.className = `feedback-message ${isCorrect ? 'feedback-correct' : 'feedback-wrong'}`;
-
-        // Only show "Time's up" if the quiz was running at Medium level and failed 
-        // due to null answer (timeout). Advanced level's null answer is a wrong submission.
-        if (!isCorrect && !chosenItem) {
-             if (currentQuizLevel === 'Medium') {
-                 messageElement.innerHTML = `Time's up! <i class="${iconClass}"></i>`;
-             }
-        }
-
-        // 2. Question Detail (Always Shown)
-        document.getElementById('question-feedback-image').src = question.url;
-        document.getElementById('question-feedback-image').style.display = 'block';
-        document.getElementById('question-feedback-term').textContent = question.term;
-        
-        // Show image if it was hidden for Advanced level
-        document.getElementById('question-feedback-image').style.display = 'block';
-
-        // 3. Audio Button Visibility
-        const audioBtn = document.getElementById('audio-button');
-        // Only show the audio button for the 'New' and 'Mastery' level feedback
-        if (currentQuizLevel === 'New' || currentQuizLevel === 'Mastery') {
-            audioBtn.style.display = 'inline-block';
-        } else {
-            audioBtn.style.display = 'none';
-        }
-
-        // 4. Demote Button
-        const demoteBtn = document.getElementById('demote-button');
-        const currentLevel = question.level;
-        
-        // We need to find the item's current state in the gameData array, as it may have been promoted/demoted already.
-        const updatedItem = gameData.find(d => d.term === question.term);
-        const updatedLevel = updatedItem ? updatedItem.level : currentLevel;
-        
-        // The logic here determines the target level for the manual demotion button
-        if (updatedLevel === 'Expert') {
-             demoteBtn.style.display = 'block';
-             demoteBtn.textContent = "Demote to Mastery"; // MODIFIED: Expert -> Mastery
-        } else if (updatedLevel === 'Mastery' && !isCorrect) { // NEW: Mastery demotion
-             demoteBtn.style.display = 'block';
-             demoteBtn.textContent = "Study this again (Demote to Advanced)";
-        } else if (updatedLevel === 'Advanced' && !isCorrect) {
-             demoteBtn.style.display = 'block';
-             demoteBtn.textContent = "Study this again (Demote to Medium)";
-        } else if (updatedLevel === 'Medium' && !isCorrect) {
-             demoteBtn.style.display = 'block';
-             demoteBtn.textContent = "Study this again (Demote to New)";
-        } else {
-             demoteBtn.style.display = 'none'; // Hide if correct or the level changed below the point of manual demotion
-        }
-        
-        // 5. Distractor Details 
-        const distractorDetailsContainer = document.querySelector('.distractor-details');
-        document.querySelector('.continue-button-container').style.display = 'block';
-
-        // Distractor details are only relevant for New/Medium/Mastery quizzes, and only 2 items maximum
-        if (currentQuizLevel === 'New' || currentQuizLevel === 'Medium' || currentQuizLevel === 'Mastery') {
-            distractorDetailsContainer.style.display = 'flex';
-            
-            // Get distractors (only the two used for feedback - currentDistractors is set in loadQuestion/submitAnswer)
-            const relevantDistractors = currentDistractors; 
-
-            // Set Distractor 1
-            if (relevantDistractors[0]) {
-                document.getElementById('distractor1-image').src = relevantDistractors[0].url;
-                document.getElementById('distractor1-term').textContent = relevantDistractors[0].term;
-                document.querySelector('.distractor-item:nth-child(1)').style.display = 'block';
-            } else {
-                document.querySelector('.distractor-item:nth-child(1)').style.display = 'none';
-            }
-            
-            // Set Distractor 2
-            if (relevantDistractors[1]) {
-                document.getElementById('distractor2-image').src = relevantDistractors[1].url;
-                document.getElementById('distractor2-term').textContent = relevantDistractors[1].term;
-                document.querySelector('.distractor-item:nth-child(2)').style.display = 'block';
-            } else {
-                document.querySelector('.distractor-item:nth-child(2)').style.display = 'none';
-            }
-
-        } else {
-             // Hide distractors for Advanced and Expert
-             distractorDetailsContainer.style.display = 'none';
-        }
-
-        // ADDED LOGIC: Handle Promotion Message Display (last step, stays visible)
-        const promotionMessageElement = document.getElementById('promotion-message');
-        if (PROMOTION_INFO) {
-            const { newLevel } = PROMOTION_INFO;
-            let messagePrefix = "Well done! This term goes to the";
-            
-            if (newLevel === 'Expert') {
-                messagePrefix = "You rock! This term goes to the";
-            }
-
-            promotionMessageElement.textContent = `${messagePrefix} ${newLevel} level`;
-            promotionMessageElement.style.display = 'block';
-
-            // Clear state so the message doesn't reappear on subsequent screen views
-            PROMOTION_INFO = null;
-        } else {
-            // Ensure message is hidden if no promotion occurred
-            promotionMessageElement.style.display = 'none';
-            promotionMessageElement.textContent = '';
-        }
-        
-        switchScreen('feedback-screen');
-    }
-
-    // --- INITIALIZATION ---
-    document.addEventListener('DOMContentLoaded', () => {
-        initializeData();
-    });
-</script>
-</body>
-</html>
